update config for hive